Fixed broken css in ie

--- a/app/components/createKeywordAlertDialog/createKeywordAlertDialog.scss
+++ b/app/components/createKeywordAlertDialog/createKeywordAlertDialog.scss
@@ -1,4 +1,5 @@
 .dialogPaper {
+  position: relative;
   width: 100%;
   padding: 20px 16px;
   top: -120px;
@@ -70,5 +71,6 @@
 
 .closeBtnWrapper {
   position: absolute;
+  top: 16px;
   right: 16px;
 }
